# IRIS

./: .gitignore  .gitmodules  DetectorTest.py  Docker_Documentation.md  Dockerfile  MAC_Setup.md  README.md  VM_Documentation.md  arducam.yaml  frames.gv  install_docker_deps.sh  install_env_deps.sh  install_pc_deps.sh  install_vmware_deps.sh  rs_d455_launch.py  run_teleop.sh  run_test.py  run_test_v1.py  test_imu.bash
.devcontainer/: Dockerfile  README.md  devcontainer.json
Motor Driver/: gen_proto.py  platformio.ini
Motor Driver/lib/MotorDriver/: README.md
Motor Driver/test/: README.md
Motor Driver/test/test_common/: test_common_example.cpp
Motor Driver/test/test_desktop/: test_desktop_bootstrap.cpp  test_desktop_example.cpp
Motor Driver/test/test_embedded/: test_embedded_example.cpp
MotorDriver/: .gitignore  README.md  gen_proto.py  platformio.ini  setup_pc.sh
MotorDriver/lib/: .gitignore  CytronMotorDriver.cpp  CytronMotorDriver.h  README.md
MotorDriver/lib/IRISMotorDriver/: README.md  library.json
MotorDriver/lib/PID/: library.json
MotorDriver/lib/RotaryEncoder/: RotaryEncoderOperator.cpp  RotaryEncoderOperator.h
MotorDriver/lib/Sabertooth/: library.json
MotorDriver/src/: CMakeLists.txt  canable_start.sh  main.cpp  sabertooth_main.cpp
MotorDriver/src/src/: joy_to_tank_control.cpp  tank_control.cpp
MotorDriver/test/: README.md
MotorDriver/test/test_common/: test_common_bootstrap.cpp
MotorDriver/test/test_embedded/: test_embedded_bootstrap.cpp
MotorDriver/test/test_scripts/: motordriver_execute_tests.cpp
communication/python_UDP_server-client/: CMakeLists.txt  package.xml
communication/python_UDP_server-client/launch/: udp_client.launch.py  udp_server.launch.py
communication/python_UDP_server-client/src/: udp_client.py  udp_server.py
config/: ekf.yaml
control/: package.xml  setup.py
control/arduino/blink/: blink.ino  bool_struct.h
control/arduino/controller_example/: CRCtest.py  (+2 more)
control/control/: pyserial_test.py
controls/: package.xml  setup.py
controls/controls/: controller_node.py
cytron_control/cytron/: platformio.ini
cytron_linear_actuator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cytron_linear_actuator/arduino/: platformio.ini
cytron_linear_actuator/arduino/src/: cytron_linear_actuator.cpp  cytron_linear_actuator.ino
cytron_linear_actuator/cytron_linear_actuator/: cytron_linear_actuator_node.py
cytron_linear_actuator/launch/: cytron_linear_actuator.launch.py
dependencies/sparkcan/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  sparkcanConfig.cmake.in
dependencies/sparkcan/examples/: control.cpp  pid.cpp  status.cpp
dependencies/sparkcan/include/: PIDController.hpp  SparkBase.hpp  SparkFlex.hpp  SparkMax.hpp
dependencies/sparkcan/src/: PIDController.cpp  SparkBase.cpp  SparkFlex.cpp  SparkMax.cpp
dependency_scripts/: .gitignore
dependency_scripts/orb_slam_3/: install.sh
depositor/: package.xml  setup.cfg  setup.py
depositor/depositor/: depositor_node.py
driver/: CMakeLists.txt  package.xml
driver/src/: driver_node.cpp
dummy_sub/: package.xml  setup.cfg  setup.py
dummy_sub/dummy_sub/: subscriber_member_function.py
example_pkg/: package.xml  setup.cfg  setup.py
excavator/: package.xml  setup.cfg  setup.py
excavator/excavator/: .excavator_node.py.swp  excavator_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install_scripts/: install_env_deps.sh  install_jetson_deps.sh  install_minimal_env_deps.sh  install_opencv_jetson.sh  install_pc_deps.sh  ubuntu_20_upgrade_part_1.sh  ubuntu_20_upgrade_part_2.sh  ubuntu_20_upgrade_part_3.sh
iris_apriltag_ros/: package.xml  setup.cfg  setup.py
iris_apriltag_ros/launch/: tag_36h11_all.launch.py
jetson/: README.md  package.xml  setup.cfg  setup.py
jetson/jetson/: arduino_comms_node.py  twist_serial.py
jetson/launch/: jetson_launch.py
jetson_cpp/: CMakeLists.txt  constants.hpp  jetson_sparkmax.cpp  package.xml
jetson_cpp/include/: constants.hpp
jetson_cpp/launch/: jetson_launch.py
jetson_cpp/src/: constants.hpp  jetson_sparkmax.cpp  sparkmax_comms_node.cpp
launch/: display.launch.py  display_tutorial.launch.py
linear_actuator/: package.xml  setup.cfg  setup.py
linear_actuator/linear_actuator/: __init__.py  linear_actuator.py
log/: latest_build
models/arena/: model.config  model.sdf
motor_driver/: package.xml  setup.cfg  setup.py  temp_requirements.txt
motor_driver/motor_driver/: __init__.py  motor_driver.py
motor_driver/proto/: commands.proto  example.proto  motorConfig.proto
motor_driver/test/: test_commands.py  test_debug.py  test_example.py
motor_driver/test_scripts/: test_main_MD.py
navigation/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
navigation-c/: CMakeLists.txt  package.xml
navigation-c/config/: map.pgm  map.yaml  nav2_params.yaml
navigation-c/launch/: display.launch.py
navigation-c/models/: robot_configuration.urdf
navigation-c/world/: my_world.sdf
navigation/launch/: display.launch.py
navigation/models/: robot_configuration.urdf
rs_imu/: package.xml  setup.cfg  setup.py
rs_imu/rs_imu/: rs_imu.py  test.py
run_scripts/: jetson_run  pc_run
sam_bot_description/: README.md
sam_bot_description/launch/: display.launch.py  tank_bot_display.launch.py
sam_bot_description/src/: cmd_vel_to_wheel_vel.py
sam_bot_description/world/: arena.world  mars_curiosity.world
src/description/: sam_bot_description_tutorial.urdf
tank_control/: CMakeLists.txt  package.xml
tank_control/include/: cytron_linear_actuator.hpp  joy_to_tank_control.hpp  tank_control.hpp
tank_control/launch/: robot_controller_launch.py
tank_control/resources/: canable_start.sh
tank_control/src/: cytron_linear_actuator.cpp  joy_to_tank_control.cpp  tank_control.cpp
teleop/: package.xml  setup.cfg  setup.py
teleop/launch/: teleop_launch.py
teleop/resource/: xbox.config.yaml
teleop/teleop/: README.md  gamepad_node.py  teleop_node.py
teleop/teleop/log/: latest_list
urdf/: robot.urdf
world/: new_lidar.sdf
(+88 files in other folders)
