<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cytron_linear_actuator</name>
  <version>0.1.0</version>
  <description>ROS2 node for controlling Cytron motor driver for linear actuator</description>
  <maintainer email="ramarao3@illinois.edu">Rama Rao Vencharla</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>