<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="teodor.tch@gmail.com">iris</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!--Rosdep does not support specific installation version: https://github.com/ros-infrastructure/rosdep/pull/694-->
  <exec_depend>python3-protobuf</exec_depend> <!--Verified on version 3.6.1-->
  <exec_depend>python3-serial</exec_depend> <!--Verified on version 3.5-->
  <exec_depend>python-crccheck-pip</exec_depend> <!--Verified on version 1.3.0: https://pypi.org/project/crccheck/-->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
