<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop</name>
  <version>1.0.0</version>
  <description>Teleop package for IRIS (2023)</description>
  <maintainer email="iris.uiuc@gmail.com">iris-autonomous</maintainer>
  <license>TODO: License declaration</license>

  <depend>teleop_twist_joy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
